# agent-stream-app

./: .gitignore  .prettierrc  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent_stream_app/: app.rs  autostart.rs  mod.rs  observer.rs  settings.rs  shortcut.rs  tray.rs  window.rs
src/components/: Attribution.svelte  Card.svelte  Messages.svelte  NavBar.svelte
src/lib/: agent.ts  shared.svelte.ts  types.ts  utils.ts
src/routes/: +layout.svelte  +layout.ts
src/routes/(agents)/: +layout.svelte  +page.svelte  AgentList.svelte  AgentListItems.svelte  AgentNode.svelte  FileMenu.svelte  FlowList.svelte  FlowListItems.svelte  NodeBase.svelte  NodeContextMenu.svelte
src/routes/settings/: +page.svelte  Agent.svelte  Core.svelte
