[package]
name = "agent-stream-app"
version = "0.1.2"
description = "Agent Stream App"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_stream_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12.3"

[dependencies]
anyhow = "1"
ctrlc = "3.4.5"
dirs = "6.0"
log = "0.4.25"
agent-stream-kit = "0.6"
askit-llm-agents = "0.2"
askit-std-agents = "0.3"
askit-rig-agents = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2.3"
tauri-plugin-window-state = "2"

#[patch.crates-io]
#agent-stream-kit = { path = "../../agent-stream-kit" }
#askit-std-agents = { path = "../../askit-std-agents" }
#askit-rig-agents = { path = "../../askit-rig-agents" }
